# InkScript

./: .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFESTO.md  README.md  SECURITY.md  SPEC.md  pyproject.toml  requirements.txt
editor/: inkpaint.py  inkpaint0.2.py  inkpaint0.3.py
examples/: hi.inks  white.inks
tools/: inks_renderer.py
